# ZortraxRoboticArm

./: LICENSE  README.md  index.html
Matlab/: manipulador.m  manipulador.m~
Matlab/robot-9.10/rvctools/threelink/@threelink/: T0_1.m  T0_2.m  T0_3.m  fkine.m  matthreelink.mat
Matlab/robot-9.10/rvctools/threelink/symbolicexpressions/: T0_1.mat  T0_2.mat  T0_3.mat  fkine.mat
assets/css/: font-awesome.min.sublime-workspace
html5up-forty/: index.html
manipulador_control/: CMakeLists.txt  package.xml
manipulador_control/config/: joints.yaml  manipulador_control.yaml
manipulador_control/launch/: manipulador_control.launch
manipulador_control/src/: control_client.cpp  control_server.cpp  dance.cpp  demo_client.cpp  demo_server.cpp  joint_position_control.cpp
manipulador_control/srv/: demo.srv  ikine.srv
manipulador_description/: CMakeLists.txt  package.xml
manipulador_description/meshes/Base/: Base.stl
manipulador_description/meshes/Grasper/: Grasper2.stl
manipulador_description/meshes/LowerArm/: Arm1Lower.stl  BaseGear.stl  LowerArm.stl
manipulador_description/urdf/: manipulador.urdf  manipulador.xacro  materials.xacro  parts.urdf
manipulador_gazebo/: CMakeLists.txt  package.xml
manipulador_gazebo/launch/: manipulador.launch
manipulador_gazebo/worlds/: worlds.world
zortrax/: model.config  model.sdf
zortrax/meshes/: Arm1Gear.stl  SideLidArmR.stl  SmallGear.stl
zortrax/meshes/Base/: Base.stl  ToothedRing.stl  coverBaseL.stl  coverBaseR.stl
zortrax/meshes/Grasper/: Grasper1.stl  GrasperBody.stl
zortrax/meshes/GrasperHolder/: GrasperHolder.stl
zortrax/meshes/LowerArm/: Arm1Upper.stl  lowerArm.stl
zortrax/meshes/Motor/: VerticalAxisGear.stl
zortrax/meshes/Support/: Ring.stl  Support.stl
zortrax/meshes/UpperArm/: Arm2.stl  Arm3.stl  SideLidArm.stl  coverArmL.stl  coverArmR.stl  upperArm.stl
